
2011-02-03
Initial Project in ajcodekatas
IExpression, ICommand, IContext

2011-03-05
First commands and expressions
Context with tests
SetLocalVariable by number
Add items from AjLanguage/AjSharp, to be reviewed

2011-03-06
Local variables in parser, with tests
var x=1;
for commands (WIP)
implementing for (var k, for (k in

2011-03-08
Fix for (... parser tests
NamedVariableExpression
WriteFunction primitive with tests
AjScript.Console (without var support)

2011-03-12
ObjectFunction WIP
new Object() with tests
EvaluationTests first version
DynamicObjectTests first version
NewExpression
Function, IFunction
ReturnValue
ObjectFunction
Object defined in AjScript.Console for x = new Object();

2011-03-17
WriteLine
Print Initial Message in AjScript.Console
Expression Evaluation Tests
null, undefined as constant expressions

2011-03-24
VarCommand
Remove LocalVariableExpression, SetLocalVariableCommand
VariableExpression
ConcatenateExpression tests
Remove variable offset from Parser, IContext, Context