@@ -55,6 +55,8 @@
     <Compile Include="Commands\ForEachCommand.cs" />
     <Compile Include="Commands\ICommand.cs" />
     <Compile Include="Commands\IfCommand.cs" />
+    <Compile Include="Expressions\ObjectExpression.cs" />
+    <Compile Include="Expressions\FunctionExpression.cs" />
     <Compile Include="Expressions\NewExpression.cs" />
     <Compile Include="Commands\ReturnCommand.cs" />
     <Compile Include="Commands\SetArrayCommand.cs" />
